[package]
name = "feelui-baseview"
version = "0.1.0"
authors = ["AnErW <anerwben@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baseview = { git = "https://github.com/RustAudio/baseview.git"}
raw-gl-context = "0.1"
core={path="../feelui-core",package="feelui-core"}
keyboard-types="0.5"
