[package]
name = "feelui-core"
version = "0.1.0"
authors = ["AnErW <anerwben@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
speedy2d = {version="1.0.7",features=[]}
glutin = "0.26.0"
cssparser = "0.28"
